# structalgo

./: CMakeLists.txt  LICENSE  README.md  compare.cpp  compare.hpp  concepts.cpp  concepts.hpp  counting.cpp  counting.hpp  enum.hpp  expand.cpp  expand.hpp  game.hpp  hash.cpp  hash.hpp  integers.cpp  integers.hpp  json-read.cpp  json-write.cpp  json.hpp  tuple.cpp  tuple.hpp  universal.cpp  universal.hpp
